tests/toylang/neg/000276_mutation.toylang
program a = { else a = a; } .
